flatpak: Properly filter installed apps

BUG: 446501


(cherry picked from commit ff36b2a24bd8c81fa0ec6bfc7a61cba02c968c93)